# AquaConsoleV2

./: .gitignore  .gitmodules  CMakeLists.txt  LUA-LICENSE  LUABridge-LICENSE  README.md  TERMCOLOR-LICENSE
AquaConsoleCore/: command.cpp  core.cpp
AquaConsoleV2/: AquaConsoleV2.cpp  AquaConsoleV2.sln  AquaConsoleV2.sln.DotSettings  console.cpp  console.h  defaultcommands.cpp  defaultcommands.h  main.cpp  pch.h  sol.h  termcolor.hpp
AquaConsoleV2/AquaConsoleCore/: AquaConsoleCore.vcxproj  AquaConsoleCore.vcxproj.filters  command.cpp  command.h  core.cpp  core.h  luaFunctions.cpp  luaFunctions.h  lua_manager.cpp  lua_manager.h  utilities.cpp  utilities.h
AquaConsoleV2/AquaConsoleCore/LuaBridge/: LuaBridge.h
AquaConsoleV2/AquaConsoleCore/LuaBridge/detail/: LuaHelpers.h
AquaConsoleV2/AquaConsoleV2/: AquaConsoleV2.cpp  AquaConsoleV2.vcxproj  AquaConsoleV2.vcxproj.filters  console.cpp  console.h  defaultcommands.cpp  defaultcommands.h  pch.h  resource.h  termcolor.hpp
AquaConsoleV2/Lua5.3.5/: Lua5.3.5.vcxproj  Lua5.3.5.vcxproj.filters
